--- a/Paper/heatmap.tex
+++ b/Paper/heatmap.tex
@@ -4,7 +4,8 @@ One of the most easily created and useful spatial data visualizations is a \emph
 When we tried to parse the dataset in the D3 library we encountered a severe problem however: this library is not suited for datasets of this scale. To solve this issue we chose to preprocess our dataset, transforming it into a heatmap dataset usable in D3 using a different platform first. Our second step was to filter only a certain tier in this transformation. The third step was applying several visual filters to these heatmaps.
 
 \subsection{Preprocessing [TODO]}
-TODO
+We used MATLAB in order to get the heatmap data for the entire data set as well as the individual heatmaps per tier.
+
 
 \subsection{Filtering [TODO]}
 TODO
