--- a/Paper/heatmap.tex
+++ b/Paper/heatmap.tex
@@ -3,9 +3,14 @@ One of the most easily created and useful spatial data visualizations is a \emph
 
 When we tried to parse the dataset in the D3 library we encountered a severe problem however: this library is not suited for datasets of this scale. To solve this issue we chose to preprocess our dataset, transforming it into a heatmap dataset usable in D3 using a different platform first. Our second step was to filter only a certain tier in this transformation. The third step was applying several visual filters to these heatmaps.
 
-\subsection{Preprocessing [TODO]}
+\subsection{Preprocessing}
 We used MATLAB in order to get the heatmap data for the entire data set as well as the individual heatmaps per tier.
 
+The script that is used to extract the data that is required for this processing can be accessed from index.html by clicking \textit{MATLAB extract} This was soleley used to extract the x, y coordinates as well as the corresponding tier, as this is the only required data that is needed to generate the set of heatmaps that we are doing.
+
+Scripts \textit{MATLAB 1} and \textit{MATLAB 2} that can also be viewed from index.html are used to generate the data that is later used to be displayed using D3js.
+
+Note that the scripts are not fully automated and hence need to be reconfigured to obtain the necessary information. For the purpose of this assignment this was unnecessary, however, the entire process can be written in such way so that the extraction and all the necessary pre-processings are done in one easy step.
 
 \subsection{Filtering [TODO]}
 TODO
