Add some pictures and some conclusion

--- a/Paper/main.tex
+++ b/Paper/main.tex
@@ -1,6 +1,7 @@
 \documentclass[a4paper,10pt]{article}
 \usepackage[english]{babel}
 \usepackage{listings}
+\usepackage{graphicx}
 
 % Javascript definition
 % Source: http://tex.stackexchange.com/questions/89574/language-option-supported-in-listings
@@ -56,5 +57,7 @@
 \include{zones}
 
 \include{match_replay}
+
+\include{conclusions}
 
 \end{document}
