--- a/Paper/main.tex
+++ b/Paper/main.tex
@@ -46,8 +46,9 @@
 }
 \title{Visualizing Spatial Data in DotA2}
 
-\date{\today}
 
+\author{Koray Yanik\\ Delft University of Technology \and Haji Akhundov\\ Delft University of Technology}
+        
 \begin{document}
 \maketitle
 
