Add the 3D heatmap

--- a/Paper/conclusions.tex
+++ b/Paper/conclusions.tex
@@ -2,6 +2,9 @@
 
 Here we present some conclusions drawn from our visualisations.
 
+\includegraphics[width=\textwidth]{HM3D}
+Here we show a raw, unnormalized 3D heatmap generated in MatLab. It shows two spikes on the starting areas. These might be the player starting positions, but almost look like outliners and might also indicate some errors.
+
 \includegraphics[width=\textwidth]{HM_tiers}
 
 This image compares the heatmaps from low tier and pro tier. We can clearly see how the normal skill tier mostly fights in lanes and rarely fights in the jungle area, while the pro tier spends a lot more time in the jungle.
