updated our emails

--- a/Paper/main.tex
+++ b/Paper/main.tex
@@ -48,7 +48,7 @@
 \title{Visualizing Spatial Data in DotA2}
 
 
-\author{Koray Yanik\\ Delft University of Technology \and Haji Akhundov\\ Delft University of Technology}
+\author{Koray Yanik\\k.i.m.yanik@student.tudelft.nl\\ Delft University of Technology \and \\Haji Akhundov\\h.akhundov@student.tudelft.nl\\ Delft University of Technology}
         
 \begin{document}
 \maketitle
