Some form changes

--- a/Paper/conclusions.tex
+++ b/Paper/conclusions.tex
@@ -26,9 +26,7 @@ Late game confirms this by exclusively showing heavy fighting in the bottom lane
 
 Another visualization that we thought of doing was to plot the each player's distance from the \textit{radiant's} base for a single match:
 
-\includegraphics[width=0.7\textwidth]{distance}
+\includegraphics[width=0.9\textwidth]{distance}
 
-From this simple visualization we can see where the majority of the game is played relatively to the base. Every spike that we see on the bottom and the top of the graph is the player either being teleported back to base station or loses live and has to start all over. Furthermore we see that there is an interesting pile up towards the end of the game where all the players are concentrated at the radient's base: This is the case where this team is trying to protect their base and the other team is destroying them.
-
-We called this a \textit{beta} analysis because we believe that extracting similar information from multiple games ranging from all the different tiers can provide even better insights.
+From this simple visualization we can see where the majority of the game is played relatively to the base. Every spike that we see on the bottom and the top of the graph is the player either being teleported back to base station or dies and has to start all over. Furthermore we see that there is an interesting pile up towards the end of the game where all the players are concentrated at the radient's base: This is the case where this team is trying to protect their base and the other team is destroying them. We called this a \textit{beta} analysis because we believe that extracting similar information from multiple games ranging from all the different tiers can provide even better insights.
 
